<resources>
    <string name="app_name">听闻</string>
    <string name="title_home">主页</string>
    <string name="title_photograph">拍照</string>
    <string name="title_user">我的</string>
    <string name="title_activity_show_news">Show_news_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="minimum">极小</string>
    <string name="small">小</string>
    <string name="normal">标准</string>
    <string name="big">大</string>
    <string name="maximum">极大</string>
    <string name="oversize">超大</string>

    <string name="Founder_blackbody">方正黑体</string>
    <string name="Founder_smooth_round">方正细圆</string>
    <string name="STXingkai">华文行楷</string>
    <string name="STXinwei">华文新魏</string>

    <string name="Shaking_the">震动一下</string>
    <string name="Length_of_vibration">长短震动</string>
    <string name="Continuous_vibration">连续震动</string>
    <string name="Closed_vibration">关闭震动</string>
    <string name="theme_setting">主题设置</string>

    <string name="information_edit">个人资料编辑</string>
    <string name="app_usage">使用指南</string>
    <string name="app_setting">App设置</string>
    <string name="contact_us">联系我们</string>
    <string name="qaa">问题与建议</string>

    <string name="BtnSend">发送</string>

    <string name="girl">&#xe632;</string>
    <string name="boy">&#xe611;</string>
    <string name="camera">&#xe6ba;</string>
    <string name="home">&#xe60b;</string>
    <string name="search">&#xeafe;</string>
    <string name="history">&#xe67d;</string>
    <string name="comment">&#xe8c5;</string>
    <string name="collect">&#xe86d;</string>
    <string name="message">&#xe65b;</string>
    <string name="menu">&#xeb71;</string>
    <string name="account">&#xe61b;</string>
    <string name="user_name">&#xe655;</string>
    <string name="psw">&#xe619;</string>
    <string name="repsw">&#xe60a;</string>
    <string name="voice">&#xe8f7;</string>
    <string name="recognize">&#xe6d7;</string>
    <string name="rollback">&#xe601;</string>
    <string-array name="cpugpu_array">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
    <string-array name="model_array">
        <item>m</item>
        <item>m-416</item>
        <item>g</item>
        <item>ELite0_320</item>
        <item>ELite1_416</item>
        <item>ELite2_512</item>
        <item>RepVGG-A0_416</item>
    </string-array>
</resources>