<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.user.PeopleInfoActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mTvUser"
        android:layout_width="400dp"
        android:layout_height="230dp"
        android:background="@drawable/bg_user"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/mTvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="轩 辕 奇 闻"
            android:textColor="@color/white"
            android:textSize="38sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="cursive"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20px"
        android:layout_marginTop="40px"
        >

        <LinearLayout
            android:id="@+id/mLlComment"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25"
            android:importantForAccessibility="no"
            >
            <com.example.news.FontIconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textSize="50dp"
                android:textColor="#7091f3"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="评论"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10px"
                android:importantForAccessibility="no"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLlCollect"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25"
            android:importantForAccessibility="no">
            <com.example.news.FontIconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collect"
                android:textSize="50dp"
                android:textColor="#ffcc0e"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="收藏"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10px"
                android:importantForAccessibility="no"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLlHistory"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25"
            android:importantForAccessibility="no">
            <com.example.news.FontIconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textSize="50dp"
                android:textColor="#ffa48f"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="历史"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10px"
                android:importantForAccessibility="no"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLlMessage"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25"
            android:importantForAccessibility="no">
            <com.example.news.FontIconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textSize="50dp"
                android:textColor="#597be4"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="消息"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10px"
                android:importantForAccessibility="no"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mRlSet"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/corners_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="30px"
        >

        <TextView
            android:id="@+id/mTvSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="APP设置"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mTvSet2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-2dp"
            android:layout_toRightOf="@id/mTvSet"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="right"
            android:importantForAccessibility="no"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/mRlUse"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/corners_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        >

        <TextView
            android:id="@+id/mTvUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="使用指南"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mTvUse2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/mTvUse"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="right"
            android:importantForAccessibility="no"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/mRlAnswer"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/corners_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        >

        <TextView
            android:id="@+id/mTvAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="联系我们"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mTvAnswer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/mTvAnswer"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="right"
            android:importantForAccessibility="no"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/mRlSuggest"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/corners_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        >

        <TextView
            android:id="@+id/mTvSuggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="问题与建议"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mTvSuggest2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/mTvSuggest"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="right"
            android:importantForAccessibility="no"/>
    </RelativeLayout>


</LinearLayout>